# manim-studio

./: .envrc  .gitignore  .mise.toml  AGENTS.md  CLAUDE.md  LICENSE  manim.cfg  pyproject.toml
.claude/: settings.json
.claude/agents/: asset-researcher.md  manim-orchestrator.md  render-debugger.md  scene-builder.md  scene-planner.md  visual-qa.md
.claude/hooks/: block-dangerous-bash.sh  check-style.sh
.claude/rules/: pedagogy.md  python-manim.md  rendering.md
.claude/skills/animation-review/: SKILL.md
.claude/skills/debug-playbook/: SKILL.md
.claude/skills/latex-guidelines/: SKILL.md
.claude/skills/manim-style/: SKILL.md
.claude/skills/render-fix/: SKILL.md
.claude/skills/scene-build/: SKILL.md
.claude/skills/scene-plan/: SKILL.md
.codex/: config.toml
.cursor/rules/: manim.mdc
docs/: agent-config-suggestions.md  type-schema-design.md
lib/: types.py
scenes/mathematics/: choose_five_three_manim.py
