[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "manim-projects"
version = "0.1.0"
description = "Mathematical animation projects using Manim"
requires-python = ">=3.13,<3.15"
dependencies = [
    "manim>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools]
py-modules = []

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "RUF", "TCH", "PTH"]

[tool.ruff.lint.per-file-ignores]
"scenes/**/*.py" = ["F403", "F405", "ANN", "B905"]
"tests/**/*.py" = ["ANN"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "scenes.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "manim.*"
ignore_missing_imports = true
